--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,4 +82,5 @@ ADD_SUBDIRECTORY( src/drobot/vision )
 ADD_SUBDIRECTORY( src/drobot/learning )
 ADD_SUBDIRECTORY( src/drobot/vestibular )
 ADD_SUBDIRECTORY( src/drobot/experiments/VisuoMotorLearning )
+ADD_SUBDIRECTORY( src/drobot/tactile )
 
